chore: fix table colours in dark mode

--- a/src/app/styles/custom-element.styles.scss
+++ b/src/app/styles/custom-element.styles.scss
@@ -1,7 +1,5 @@
 @import 'variables';
 
-
-
 button[mat-button].mat-button,
 a[button] {
     background-color: $color-primary;
@@ -79,7 +77,7 @@ mat-form-field {
 
 .mat-form-field-infix {
     border-top: none;
-    top: .1em !important;
+    top: 0.1em !important;
 }
 
 .mat-select-panel {
@@ -125,12 +123,15 @@ mat-dialog-container.mat-dialog-container {
     header {
         display: flex;
         align-items: center;
-        padding: .5em 1em;
+        padding: 0.5em 1em;
         width: 100%;
         background-color: $color-primary;
         color: $font-light;
 
-        h1, h2, h3, h4 {
+        h1,
+        h2,
+        h3,
+        h4 {
             flex: 1;
             min-width: 50%;
         }
@@ -187,7 +188,7 @@ mat-dialog-container.mat-dialog-container {
 
 .mat-tooltip {
     background-color: $background-dark;
-    font-size: .8em;
+    font-size: 0.8em;
     white-space: pre-line;
 }
 
@@ -207,11 +208,10 @@ mat-dialog-container.mat-dialog-container {
 
 sidebar,
 mat-option {
-
     span.small {
-        font-size: .8em;
-        margin: 0 .5rem;
-        opacity: .75;
+        font-size: 0.8em;
+        margin: 0 0.5rem;
+        opacity: 0.75;
     }
 
     .item {
@@ -340,6 +340,14 @@ mat-expansion-panel {
         @apply flex items-center;
         height: 2.75rem;
     }
+}
+
+#placeos .dark-mode [table-head] {
+    @apply bg-gray-600 border-gray-300;
+}
+
+.dark-mode [table-row] {
+    @apply hover:bg-opacity-10;
 }
 
 .cdk-drag-preview {
